update: corrected type scale on mobile

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,7 +7,7 @@
 }
 
 :root {
-	font-size: calc(14px + 0.8vh);
+	font-size: calc(14px + 0.32vh);
 	@media screen and (min-width: 600px) {
 		font-size: calc(13px + 0.098vw);
 	}
